cmake_minimum_required(VERSION 3.16)

project(TileGame VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_SOURCE_DIR}/inc)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

file(GLOB TILEGAME_SOURCE ${CMAKE_SOURCE_DIR}/src/*.cpp)
file(GLOB TILEGAME_HEADERS ${CMAKE_SOURCE_DIR}/inc/*.h)
file(GLOB TILEGAME_FORMS ${CMAKE_SOURCE_DIR}/inc/*.ui)

add_executable(${PROJECT_NAME}
    ${TILEGAME_SOURCE}
    ${TILEGAME_HEADERS}
    ${TILEGAME_FORMS}
    main.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/inc>
    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
)

target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
